terrain viewer: use vertex arrays + glDrawElements. Vertex normals are fake, needs proper per-vertex normals

--- a/terrain_viewer/terrain_viewer.lpi
+++ b/terrain_viewer/terrain_viewer.lpi
@@ -37,7 +37,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="terrain_viewer.pas"/>
         <IsPartOfProject Value="True"/>
@@ -53,6 +53,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="rs_world"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="vector_util.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="vector_util"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
