terrain viewer: load file by index

--- a/terrain_viewer/terrain_viewer.lpi
+++ b/terrain_viewer/terrain_viewer.lpi
@@ -29,7 +29,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <CommandLineParams Value="hmp"/>
+        <CommandLineParams Value="1"/>
       </local>
     </RunParams>
     <RequiredPackages Count="1">
