--- a/.hgignore
+++ b/.hgignore
@@ -15,6 +15,8 @@ syntax: glob
 *.hmt
 *.HOB
 *.HMT
+*_HOB
+*_HMT
 *.text
 *.tex
 *.pgm
@@ -22,4 +24,8 @@ syntax: glob
 *.pnm
 *.tga
 *.raw
+*.dat
+*.hdr
+*.DAT
+*.HDR
 imgui.ini
